[project]
name = "slicehub"
version = "0.1.0"
description = "Modular backend SDK for building Super Apps"
authors = [
    { name="Vatsalya", email="vatbhadaurya@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/VatsalyaBhadaurya/SliceHub-Library"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "fastapi >=0.100",
    "uvicorn[standard] >=0.22",
    "SQLAlchemy >=2.0",
    "psycopg2-binary >=2.9",
    "python-jose >=3.3",
]
